<resources>
    <string name="app_name">Really random ringtone</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>




    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>


    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />


    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>


    <string name="pref_ringtone_silent">Silent</string>

    <string name="banner_ad_unit_id">ca-app-pub-5368195271545700/2338080470</string>

    <string name="must_be_advertising">There must be advertising</string>
    <string name="settings">Settings</string>
    <string name="DownloadMaxFiles">Max ringtones</string>
    <string name="DownloadMaxFiles_desc">The maximum amount of ringtones that can be needed in the "no internet" mode</string>
    <string name="pref_title_use_ringon">Use https://ringon.ru</string>
    <string name="pref_summary_use_ringon">Use site ringon.ru for ringtones download</string>
    <string name="pref_title_use_myrington">Use https://myrington.ru</string>
    <string name="pref_summary_use_myrington">Use site myrington.ru for ringtones download</string>
    <string name="pref_title_is_wifi_only">Wifi only</string>
    <string name="pref_summary_is_wifi_only">Download ringtones only when you connect to the Wifi network</string>
    <string name="current_ringtone">Current ringtone</string>
    <string name="pref_title_MinCachedFiles">Number of played ringtones</string>
    <string name="pref_summary_MinCachedFiles">The maximum size of the list of the last played ringtones</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="are_you_sure_delete_mp3">Are you sure you want to delete this ringtone?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="are_you_sure_move_mp3">Are you sure you want to transfer this ringtone to your favorites?</string>
    <string name="getpro">Get\nPRO</string>
    <string name="warning">Warning</string>

    <string name="statistics" formatted="false"><![CDATA[
Downloaded ringtones:&nbsp;<font color="blue"><b>%d</b></font>&nbsp;<font color="#008800"><small>%.1f Мб</small></font><br/>
&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;New ringtones: <font color="blue">%d</font>&nbsp;<font color="#008800"><small>%.1f Мб</small></font><br/>
&nbsp;&nbsp;&nbsp;Caching ringtines: <font color="blue">%d</font>&nbsp;<font color="#008800"><small>%.1f Мб</small></font><br/>
&nbsp;Favorites ringtones: <font color="blue">%d</font>&nbsp;<font color="#008800"><small>%.1f Мб</small></font><br/>
&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Ringtones limit: <font color="blue">%d</font>%s]]>
</string>

    <string name="statistics_pro" formatted="false"><![CDATA[
Downloaded ringtones:&nbsp;<font color="blue"><b>%d</b></font>&nbsp;<font color="#008800"><small>%.1f Мб</small></font><br/>
&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;New ringtones: <font color="blue">%d</font>&nbsp;<font color="#008800"><small>%.1f Мб</small></font><br/>
&nbsp;&nbsp;&nbsp;Caching ringtines: <font color="blue">%d</font>&nbsp;<font color="#008800"><small>%.1f Мб</small></font><br/>
&nbsp;Favorites ringtones: <font color="blue">%d</font>&nbsp;<font color="#008800"><small>%.1f Мб</small></font>]]>
</string>

    <string name="downloadalimittext" formatted="false"><![CDATA[<br/><font color="red">The limit of downloaded ringtones ends. To increase the limit, click on the banner or buy the version of PRO</font>]]></string>
    <string name="helpstr">If you have a two-sim phone, then to play a random ringtone with an incoming call manually, change the default ringtone to RRR default ringtone.
For one-sim phones, such a change is made automatically by the program</string>
</resources>
