<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.bacompany.reallyrandomringtone.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/statistics"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:bufferType="spannable"
        android:fontFamily="monospace"
        android:inputType="textMultiLine|textNoSuggestions"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:text="Скачано рингтонов: 11 [12.2 Mb]"
        android:textSize="14sp" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/statistics"
        android:orientation="horizontal"
        android:paddingLeft="5dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/button"
            android:layout_weight="5"
            android:gravity="center"
            android:text="@string/current_ringtone"
            android:textAlignment="viewStart"
            android:textSize="20sp" />

        <ToggleButton
            android:id="@+id/playstop"
            android:layout_width="53dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView2"
            android:layout_alignBottom="@+id/textView2"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_weight="1"
            android:autoText="false"
            android:background="@drawable/playcheck"
            android:checked="true"
            android:onClick="onPlayStopClick"
            android:textOff=""
            android:textOn="" />

        <Button
            android:id="@+id/next"
            android:layout_width="53dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/playstop"
            android:layout_alignBottom="@+id/playstop"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_weight="1"
            android:background="@android:drawable/ic_media_next"
            android:onClick="onNextClick" />
    </LinearLayout>

    <TextView
        android:id="@+id/CustomRingtoneName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/linearLayout"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingTop="5dp" />

    <FrameLayout
        android:id="@+id/favlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="false"
        android:layout_below="@+id/CustomRingtoneName"
        android:gravity="top|center"
        android:textAlignment="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:onClick="OnAdlayerClick"
            android:text="@string/must_be_advertising"
            android:textAlignment="center" />

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="0dp"
            android:gravity="right"
            android:padding="0dp"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id"
            tools:layout_height="100dp" />
    </FrameLayout>

</RelativeLayout>
